--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+#logging.level.root=debug
