--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,13 @@
     </scm>
     <properties>
         <java.version>17</java.version>
+        <sonar.host.projectKey>test</sonar.host.projectKey>
+        <sonar.host.url>http://127.0.0.1:9056</sonar.host.url>
+        <sonar.login>e272c2942b214e91219dce88fdfb2d298805f407</sonar.login>
     </properties>
+
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -102,6 +108,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.6.0.1398</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
     </build>
 </project>
